# Oono

./: Cargo.toml  README.md  TODO.md
oono-client/: Cargo.toml
oono-client/src/: app.rs  card.rs  deck.rs  event.rs  game.rs  lib.rs  main.rs
oono-server/: Cargo.toml
oono-server/src/: main.rs
